feat(public): add workflow engagement latency (#260) (#265)
